--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.4.4",
     "@mui/lab": "^5.0.0-alpha.72",
@@ -20,9 +21,11 @@
     "react-big-calendar": "^0.39.3",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.28.0",
     "react-router-dom": "6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
