--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.39.3",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.28.0",
